sql and module updates

--- a/roles/tomcat/tasks/main.yml
+++ b/roles/tomcat/tasks/main.yml
@@ -4,6 +4,10 @@
   with_items:
     - tomcat7
 
+- name: Modify tomcat config
+  template: src=tomcat7 dest=/etc/default/tomcat7
+  notify: restart tomcat
+
 - name: Enable Tomcat Service
   service: name=tomcat7 state=started enabled=yes
 
