--- a/roles/tomcat/handlers/main.yml
+++ b/roles/tomcat/handlers/main.yml
@@ -1,3 +1,3 @@
 ---
-- name: Restart Tomcat
-  service: name=tomcat state=restarted
+- name: restart tomcat
+  service: name=tomcat7 state=restarted
